2007-10-04 Denis Ovsienko

	* pid_output.c: (pid_output) stop using LOGFILE_MASK
	  (0600 by default), introduce and use PIDFILE_MASK (0644)
	  instead.

2007-09-18  Paul Jakma <paul.jakma@sun.com>

	* privs.c: definition of ZCAP_NET_ADMIN on Solaris should
	  be PRIV_SYS_IP_CONFIG, when that's available. Thus allowing
	  Quagga to work with in Solaris zones with exclusive IP
	  instances.

2007-08-21 Denis Ovsienko

	* sockopt.[ch]: (setsockopt_so_sendbuf, getsockopt_so_sendbuf):
	  new functions to adjust ospfd working socket.

2007-08-13 Denis Ovsienko

	* zebra.h: introduce ZEBRA_ERR_KERNEL and ZEBRA_ERR_NOERROR

2007-07-06 Atis Elsts <atis@mikrotik.com>

	* pqueue.{c,h}: Export trickle_up

2007-07-26  Paul Jakma <paul.jakma@sun.com>

	* log.c: (mes_lookup) warning about code not being in same-number
	  array slot should be debug, not warning. E.g. BGP has several
	  discontigious number spaces, allocating from different parts of a
	  space is not uncommon (e.g. IANA assigned versus vendor-assigned
	  code points in some number space).
	  
2007-07-06 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* sockopt.{c,h}: (setsockopt_multicast_ipv4) Add some comments about
	  the arguments.

2007-06-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* zebra.h: On linux, we seem to need to include <linux/types.h> before
	  <sys/sysctl.h>, otherwise we get isisd compilation errors about
	  __be16 not being defined.

2007-05-10 Paul Jakma <paul.jakma@sun.com>

	* zebra.h: Don't try define _GNU_SOURCE, autoconf should do it.

2007-05-03 Paul Jakma <paul.jakma@sun.com>

	* memtypes.c: Add MTYPE_ATTR_EXTRA and MTYPE_BGP_ROUTE_EXTRA

2007-05-01 David L Stevens <dlstevens@us.ibm.com>

	* (general) These changes collectively add route-map and
	  prefix-list support to zebra and fix a bug in "show
	  route-map" (with no argument).
	* command.h: added PROTOCOL_NODE type
	* log.c: (proto_name2num) new function, protocol name to
	  number translation.